compiler: autotuner, docs fixing and tests

--- a/examples/performance/00_overview.ipynb
+++ b/examples/performance/00_overview.ipynb
@@ -342,9 +342,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1)\n",
+      "          for (int y = y0_blk0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
       "          {\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
       "            {\n",
@@ -428,17 +428,17 @@
       "      {\n",
       "        for (int z0_blk0 = z_m; z0_blk0 <= z_M; z0_blk0 += z0_blk0_size)\n",
       "        {\n",
-      "          for (int x0_blk1 = x0_blk0; x0_blk1 <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x0_blk1 += x0_blk1_size)\n",
+      "          for (int x0_blk1 = x0_blk0; x0_blk1 <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x0_blk1 += x0_blk1_size)\n",
       "          {\n",
-      "            for (int y0_blk1 = y0_blk0; y0_blk1 <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y0_blk1 += y0_blk1_size)\n",
+      "            for (int y0_blk1 = y0_blk0; y0_blk1 <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y0_blk1 += y0_blk1_size)\n",
       "            {\n",
-      "              for (int z0_blk1 = z0_blk0; z0_blk1 <= (int)(fmin(z_M, z0_blk0 + z0_blk0_size - 1)); z0_blk1 += z0_blk1_size)\n",
+      "              for (int z0_blk1 = z0_blk0; z0_blk1 <= MIN(z_M, z0_blk0 + z0_blk0_size - 1); z0_blk1 += z0_blk1_size)\n",
       "              {\n",
-      "                for (int x = x0_blk1; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "                for (int x = x0_blk1; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "                {\n",
-      "                  for (int y = y0_blk1; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1)\n",
+      "                  for (int y = y0_blk1; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
       "                  {\n",
-      "                    for (int z = z0_blk1; z <= (int)(fmin(z_M, z0_blk0 + z0_blk0_size - 1)); z += 1)\n",
+      "                    for (int z = z0_blk1; z <= MIN(z_M, z0_blk0 + z0_blk0_size - 1); z += 1)\n",
       "                    {\n",
       "                      u[t1][x + 4][y + 4][z + 4] = ((-6.66666667e-1F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 1][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 2][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 4][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 5][z + 4]/h_y) + (-8.33333333e-2F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 4][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 5][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 7][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 8][z + 4]/h_y) + (8.33333333e-2F/h_y)*(8.33333333e-2F*u[t0][x + 4][y][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 1][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 3][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 4][z + 4]/h_y) + (6.66666667e-1F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 3][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 4][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 6][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 7][z + 4]/h_y))*sin(f[x + 1][y + 1][z + 1])*pow(f[x + 1][y + 1][z + 1], 2);\n",
       "                    }\n",
@@ -580,7 +580,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -42,7 +42,8 @@\n",
+      "@@ -44,7 +44,8 @@\n",
       "         {\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
@@ -617,7 +617,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -43,7 +43,7 @@\n",
+      "@@ -45,7 +45,7 @@\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
       "             float r0 = 1.0F/h_y;\n",
@@ -653,7 +653,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -43,7 +43,7 @@\n",
+      "@@ -45,7 +45,7 @@\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
       "             float r0 = 1.0F/h_y;\n",
@@ -1242,6 +1242,8 @@
      "output_type": "stream",
      "text": [
       "#define _POSIX_C_SOURCE 200809L\n",
+      "#define MIN(a,b) (((a) < (b)) ? (a) : (b))\n",
+      "#define MAX(a,b) (((a) > (b)) ? (a) : (b))\n",
       "#define START_TIMER(S) struct timeval start_ ## S , end_ ## S ; gettimeofday(&start_ ## S , NULL);\n",
       "#define STOP_TIMER(S,T) gettimeofday(&end_ ## S, NULL); T->S += (double)(end_ ## S .tv_sec-start_ ## S.tv_sec)+(double)(end_ ## S .tv_usec-start_ ## S .tv_usec)/1000000;\n",
       "\n",
@@ -1323,9 +1325,9 @@
       "      {\n",
       "        for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "        {\n",
-      "          for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "          for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "          {\n",
-      "            for (int y = y0_blk0 - 2, ys = 0; y <= (int)(fmin(y_M + 2, y0_blk0 + y0_blk0_size + 1)); y += 1, ys += 1)\n",
+      "            for (int y = y0_blk0 - 2, ys = 0; y <= MIN(y_M + 2, y0_blk0 + y0_blk0_size + 1); y += 1, ys += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1333,7 +1335,7 @@
       "                r1[ys][z] = (8.33333333e-2F*(u[t0][x + 4][y + 2][z + 4] - u[t0][x + 4][y + 6][z + 4]) + 6.66666667e-1F*(-u[t0][x + 4][y + 3][z + 4] + u[t0][x + 4][y + 5][z + 4]))/h_y;\n",
       "              }\n",
       "            }\n",
-      "            for (int y = y0_blk0, ys = 0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1)\n",
+      "            for (int y = y0_blk0, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(f,u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1452,9 +1454,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0, ys = 0, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = -2; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = 2)\n",
+      "          for (int y = y0_blk0, ys = 0, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = -2; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = 2)\n",
       "          {\n",
       "            for (int yy = yii, ysi = (yy + ys + 2)%(5); yy <= 2; yy += 1, ysi = (yy + ys + 2)%(5))\n",
       "            {\n",
@@ -1576,9 +1578,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0 - 1, ys = 0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1)\n",
+      "          for (int y = y0_blk0 - 1, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
       "          {\n",
       "            #pragma omp simd aligned(u:32)\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1586,7 +1588,7 @@
       "              r0[ys][z] = (8.33333333e-2F*(u[t0][x + 4][y + 3][z + 4] - u[t0][x + 4][y + 7][z + 4]) + 6.66666667e-1F*(-u[t0][x + 4][y + 4][z + 4] + u[t0][x + 4][y + 6][z + 4]))/h_y;\n",
       "            }\n",
       "          }\n",
-      "          for (int y = y0_blk0, ys = 0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1)\n",
+      "          for (int y = y0_blk0, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
       "          {\n",
       "            #pragma omp simd aligned(f,u:32)\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1660,9 +1662,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0 - 1, ys = 0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1)\n",
+      "          for (int y = y0_blk0 - 1, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
       "          {\n",
       "            #pragma omp simd aligned(f,u:32)\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1670,7 +1672,7 @@
       "              r0[ys][z] = (f[x + 1][y + 2][z + 1]*f[x + 1][y + 2][z + 1])*(8.33333333e-2F*(u[t0][x + 4][y + 3][z + 4] - u[t0][x + 4][y + 7][z + 4]) + 6.66666667e-1F*(-u[t0][x + 4][y + 4][z + 4] + u[t0][x + 4][y + 6][z + 4]))/((h_y*h_y));\n",
       "            }\n",
       "          }\n",
-      "          for (int y = y0_blk0, ys = 0; y <= (int)(fmin(y_M, y0_blk0 + y0_blk0_size - 1)); y += 1, ys += 1)\n",
+      "          for (int y = y0_blk0, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
       "          {\n",
       "            #pragma omp simd aligned(u:32)\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1739,6 +1741,8 @@
      "output_type": "stream",
      "text": [
       "#define _POSIX_C_SOURCE 200809L\n",
+      "#define MIN(a,b) (((a) < (b)) ? (a) : (b))\n",
+      "#define MAX(a,b) (((a) > (b)) ? (a) : (b))\n",
       "#define START_TIMER(S) struct timeval start_ ## S , end_ ## S ; gettimeofday(&start_ ## S , NULL);\n",
       "#define STOP_TIMER(S,T) gettimeofday(&end_ ## S, NULL); T->S += (double)(end_ ## S .tv_sec-start_ ## S.tv_sec)+(double)(end_ ## S .tv_usec-start_ ## S .tv_usec)/1000000;\n",
       "\n",
@@ -1818,7 +1822,7 @@
       "      #pragma omp for collapse(1) schedule(dynamic,1)\n",
       "      for (int x0_blk0 = x_m; x0_blk0 <= x_M; x0_blk0 += x0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= (int)(fmin(x_M, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "        {\n",
       "          for (int y = y_m - 2; y <= y_M + 2; y += 1)\n",
       "          {\n",
@@ -1882,6 +1886,8 @@
      "output_type": "stream",
      "text": [
       "#define _POSIX_C_SOURCE 200809L\n",
+      "#define MIN(a,b) (((a) < (b)) ? (a) : (b))\n",
+      "#define MAX(a,b) (((a) > (b)) ? (a) : (b))\n",
       "#define START_TIMER(S) struct timeval start_ ## S , end_ ## S ; gettimeofday(&start_ ## S , NULL);\n",
       "#define STOP_TIMER(S,T) gettimeofday(&end_ ## S, NULL); T->S += (double)(end_ ## S .tv_sec-start_ ## S.tv_sec)+(double)(end_ ## S .tv_usec-start_ ## S .tv_usec)/1000000;\n",
       "\n",
@@ -1958,9 +1964,9 @@
       "      {\n",
       "        for (int y0_blk0 = y_m - 2; y0_blk0 <= y_M + 2; y0_blk0 += y0_blk0_size)\n",
       "        {\n",
-      "          for (int x = x0_blk0; x <= (int)(fmin(x_M + 2, x0_blk0 + x0_blk0_size - 1)); x += 1)\n",
+      "          for (int x = x0_blk0; x <= MIN(x_M + 2, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
       "          {\n",
-      "            for (int y = y0_blk0; y <= (int)(fmin(y_M + 2, y0_blk0 + y0_blk0_size - 1)); y += 1)\n",
+      "            for (int y = y0_blk0; y <= MIN(y_M + 2, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1980,9 +1986,9 @@
       "      {\n",
       "        for (int y1_blk0 = y_m; y1_blk0 <= y_M; y1_blk0 += y1_blk0_size)\n",
       "        {\n",
-      "          for (int x = x1_blk0; x <= (int)(fmin(x_M, x1_blk0 + x1_blk0_size - 1)); x += 1)\n",
+      "          for (int x = x1_blk0; x <= MIN(x_M, x1_blk0 + x1_blk0_size - 1); x += 1)\n",
       "          {\n",
-      "            for (int y = y1_blk0; y <= (int)(fmin(y_M, y1_blk0 + y1_blk0_size - 1)); y += 1)\n",
+      "            for (int y = y1_blk0; y <= MIN(y_M, y1_blk0 + y1_blk0_size - 1); y += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(f,u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
