compiler: strengthen tests, MINMAX as Func, notebooks

--- a/examples/performance/00_overview.ipynb
+++ b/examples/performance/00_overview.ipynb
@@ -342,9 +342,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
+      "          for (int y = y0_blk0; y <= MIN(y0_blk0 + y0_blk0_size - 1, y_M); y += 1)\n",
       "          {\n",
       "            for (int z = z_m; z <= z_M; z += 1)\n",
       "            {\n",
@@ -428,17 +428,17 @@
       "      {\n",
       "        for (int z0_blk0 = z_m; z0_blk0 <= z_M; z0_blk0 += z0_blk0_size)\n",
       "        {\n",
-      "          for (int x0_blk1 = x0_blk0; x0_blk1 <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x0_blk1 += x0_blk1_size)\n",
+      "          for (int x0_blk1 = x0_blk0; x0_blk1 <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x0_blk1 += x0_blk1_size)\n",
       "          {\n",
-      "            for (int y0_blk1 = y0_blk0; y0_blk1 <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y0_blk1 += y0_blk1_size)\n",
+      "            for (int y0_blk1 = y0_blk0; y0_blk1 <= MIN(y0_blk0 + y0_blk0_size - 1, y_M); y0_blk1 += y0_blk1_size)\n",
       "            {\n",
-      "              for (int z0_blk1 = z0_blk0; z0_blk1 <= MIN(z_M, z0_blk0 + z0_blk0_size - 1); z0_blk1 += z0_blk1_size)\n",
+      "              for (int z0_blk1 = z0_blk0; z0_blk1 <= MIN(z0_blk0 + z0_blk0_size - 1, z_M); z0_blk1 += z0_blk1_size)\n",
       "              {\n",
-      "                for (int x = x0_blk1; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "                for (int x = x0_blk1; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x += 1)\n",
       "                {\n",
-      "                  for (int y = y0_blk1; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
+      "                  for (int y = y0_blk1; y <= MIN(y0_blk0 + y0_blk0_size - 1, y_M); y += 1)\n",
       "                  {\n",
-      "                    for (int z = z0_blk1; z <= MIN(z_M, z0_blk0 + z0_blk0_size - 1); z += 1)\n",
+      "                    for (int z = z0_blk1; z <= MIN(z0_blk0 + z0_blk0_size - 1, z_M); z += 1)\n",
       "                    {\n",
       "                      u[t1][x + 4][y + 4][z + 4] = ((-6.66666667e-1F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 1][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 2][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 4][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 5][z + 4]/h_y) + (-8.33333333e-2F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 4][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 5][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 7][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 8][z + 4]/h_y) + (8.33333333e-2F/h_y)*(8.33333333e-2F*u[t0][x + 4][y][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 1][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 3][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 4][z + 4]/h_y) + (6.66666667e-1F/h_y)*(8.33333333e-2F*u[t0][x + 4][y + 3][z + 4]/h_y - 6.66666667e-1F*u[t0][x + 4][y + 4][z + 4]/h_y + 6.66666667e-1F*u[t0][x + 4][y + 6][z + 4]/h_y - 8.33333333e-2F*u[t0][x + 4][y + 7][z + 4]/h_y))*sin(f[x + 1][y + 1][z + 1])*pow(f[x + 1][y + 1][z + 1], 2);\n",
       "                    }\n",
@@ -580,7 +580,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -44,7 +44,8 @@\n",
+      "@@ -42,7 +42,8 @@\n",
       "         {\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
@@ -617,7 +617,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -45,7 +45,7 @@\n",
+      "@@ -43,7 +43,7 @@\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
       "             float r0 = 1.0F/h_y;\n",
@@ -653,7 +653,7 @@
      "text": [
       "--- \n",
       "+++ \n",
-      "@@ -45,7 +45,7 @@\n",
+      "@@ -43,7 +43,7 @@\n",
       "           for (int z = z_m; z <= z_M; z += 1)\n",
       "           {\n",
       "             float r0 = 1.0F/h_y;\n",
@@ -1325,9 +1325,9 @@
       "      {\n",
       "        for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "        {\n",
-      "          for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "          for (int x = x0_blk0; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x += 1)\n",
       "          {\n",
-      "            for (int y = y0_blk0 - 2, ys = 0; y <= MIN(y_M + 2, y0_blk0 + y0_blk0_size + 1); y += 1, ys += 1)\n",
+      "            for (int y = y0_blk0 - 2, ys = 0; y <= MIN(y0_blk0 + y0_blk0_size + 1, y_M + 2); y += 1, ys += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1335,7 +1335,7 @@
       "                r2[ys][z] = r1*(8.33333333e-2F*(u[t0][x + 4][y + 2][z + 4] - u[t0][x + 4][y + 6][z + 4]) + 6.66666667e-1F*(-u[t0][x + 4][y + 3][z + 4] + u[t0][x + 4][y + 5][z + 4]));\n",
       "              }\n",
       "            }\n",
-      "            for (int y = y0_blk0, ys = 0; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1)\n",
+      "            for (int y = y0_blk0, ys = 0; y <= MIN(y0_blk0 + y0_blk0_size - 1, y_M); y += 1, ys += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(f,u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1455,9 +1455,9 @@
       "    {\n",
       "      for (int y0_blk0 = y_m; y0_blk0 <= y_M; y0_blk0 += y0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x += 1)\n",
       "        {\n",
-      "          for (int y = y0_blk0, ys = 0, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = -2; y <= MIN(y_M, y0_blk0 + y0_blk0_size - 1); y += 1, ys += 1, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = 2)\n",
+      "          for (int y = y0_blk0, ys = 0, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = -2; y <= MIN(y0_blk0 + y0_blk0_size - 1, y_M); y += 1, ys += 1, yr0 = (ys)%(5), yr1 = (ys + 3)%(5), yr2 = (ys + 4)%(5), yr3 = (ys + 1)%(5), yii = 2)\n",
       "          {\n",
       "            for (int yy = yii, ysi = (yy + ys + 2)%(5); yy <= 2; yy += 1, ysi = (yy + ys + 2)%(5))\n",
       "            {\n",
@@ -1533,13 +1533,6 @@
     "* Within the `y` loop there are several iteration variables, some of which (`yr0`, `yr1`, ...) employ modulo increment to cyclically produce the indices 0 and 1.\n",
     "\n",
     "In essence, with `cire-rotate`, instead of computing an entire slice of `y` values, at each `y` iteration we only keep track of the values that are strictly necessary to evaluate `u` at `y` -- only two values in this case. This results in a working set reduction, at the price of turning one parallel loop (`y`) into a sequential one."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we have a \"fatter\" temporary, and that's good -- but if, instead, we had had an `Operator` such as the one below, the gain from a reduced operation count might be outweighed by the presence of more temporaries, which means larger working set and increased memory traffic."
    ]
   },
   {
@@ -1642,7 +1635,7 @@
       "      #pragma omp for collapse(1) schedule(dynamic,1)\n",
       "      for (int x0_blk0 = x_m; x0_blk0 <= x_M; x0_blk0 += x0_blk0_size)\n",
       "      {\n",
-      "        for (int x = x0_blk0; x <= MIN(x_M, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "        for (int x = x0_blk0; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M); x += 1)\n",
       "        {\n",
       "          for (int y = y_m - 2; y <= y_M + 2; y += 1)\n",
       "          {\n",
@@ -1784,9 +1777,9 @@
       "      {\n",
       "        for (int y0_blk0 = y_m - 2; y0_blk0 <= y_M + 2; y0_blk0 += y0_blk0_size)\n",
       "        {\n",
-      "          for (int x = x0_blk0; x <= MIN(x_M + 2, x0_blk0 + x0_blk0_size - 1); x += 1)\n",
+      "          for (int x = x0_blk0; x <= MIN(x0_blk0 + x0_blk0_size - 1, x_M + 2); x += 1)\n",
       "          {\n",
-      "            for (int y = y0_blk0; y <= MIN(y_M + 2, y0_blk0 + y0_blk0_size - 1); y += 1)\n",
+      "            for (int y = y0_blk0; y <= MIN(y0_blk0 + y0_blk0_size - 1, y_M + 2); y += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
@@ -1806,9 +1799,9 @@
       "      {\n",
       "        for (int y1_blk0 = y_m; y1_blk0 <= y_M; y1_blk0 += y1_blk0_size)\n",
       "        {\n",
-      "          for (int x = x1_blk0; x <= MIN(x_M, x1_blk0 + x1_blk0_size - 1); x += 1)\n",
+      "          for (int x = x1_blk0; x <= MIN(x1_blk0 + x1_blk0_size - 1, x_M); x += 1)\n",
       "          {\n",
-      "            for (int y = y1_blk0; y <= MIN(y_M, y1_blk0 + y1_blk0_size - 1); y += 1)\n",
+      "            for (int y = y1_blk0; y <= MIN(y1_blk0 + y1_blk0_size - 1, y_M); y += 1)\n",
       "            {\n",
       "              #pragma omp simd aligned(f,u:32)\n",
       "              for (int z = z_m; z <= z_M; z += 1)\n",
